@@ -1,6 +1,7 @@
 <h3>0.13.6</h3>
 <ul>
     <li>#225 Git Branch Parameter is unsupported</li>
+    <li>#227 Jenkins invalid configuration causes AuthenticationException and UI not respond correctly to this</li>
 </ul>
 <h3>0.13.5</h3>
 <ul>
