@@ -18,14 +18,7 @@ package org.codinjutsu.tools.jenkins.security;
 
 public class AuthenticationException extends RuntimeException {
 
-
     private final String responseBody;
-
-    public AuthenticationException(String message) {
-        super(message);
-        responseBody = "";
-    }
-
 
     public AuthenticationException(String message, String responseBody) {
         super(message);
