@@ -1,5 +1,6 @@
 Version 0.13.6
     * #225 Git Branch Parameter is unsupported
+    * #227 Jenkins invalid configuration causes AuthenticationException and UI not respond correctly to this
 
 Version 0.13.5
     * #221 Allow showing all build results in the status bar. Thanks to @nvdweem
